[package]
name = "cargo-liner"
version = "0.9.0"
edition = "2024"
rust-version = "1.85"
description = """
Cargo subcommand to install and update binary packages listed in configuration.
"""
categories = [
    "command-line-utilities",
    "development-tools::cargo-plugins",
    "config",
]
keywords = ["cargo", "subcommand", "plugin", "install", "update"]
license = "GPL-3.0-only"
authors = ["Paul Mabileau <paulmabileau@hotmail.fr>"]
repository = "https://github.com/PaulDance/cargo-liner"
homepage = "https://github.com/PaulDance/cargo-liner"
documentation = "https://docs.rs/cargo-liner"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/src/**/*",
    "/examples/**/*",
    "/benches/**/*",
    "/tests/**/*",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE.txt",
]

[dependencies]
human-panic = "~2.0"
clap = { version = "~4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "color",
] }
clap_complete = "~4.5"
log = { version = "~0.4", features = ["std", "serde"] }
pretty_env_logger = "~0.5"
color-eyre = "~0.6"
tabled = { version = "~0.17", features = ["ansi"] }
serde = { version = "~1.0", features = ["derive"] }
serde_with = "~3.11"
semver = { version = "~1.0", features = ["serde"] }
url = { version = "~2.5", features = ["serde"] }
regex = "~1.11"
toml = "~0.8"
home = "~0.5"

[dev-dependencies]
indoc = "~2.0"
tempfile = "~3.17"
trycmd = "~0.15"
snapbox = "~0.6"
cargo-test-macro = "~0.3"
cargo-test-support = "~0.5"

# See https://crates.io/crates/color-eyre: debug `backtrace` is slow.
[profile.dev.package.backtrace]
opt-level = 3

[lints.clippy]
all = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 1 }

allow-attributes = { level = "warn", priority = 2 }
allow-attributes-without-reason = { level = "warn", priority = 2 }
dbg-macro = { level = "warn", priority = 2 }
print-stdout = { level = "warn", priority = 2 }
print-stderr = { level = "warn", priority = 2 }
str-to-string = { level = "warn", priority = 2 }
string-to-string = { level = "warn", priority = 2 }
multiple-unsafe-ops-per-block = { level = "warn", priority = 2 }
undocumented-unsafe-blocks = { level = "warn", priority = 2 }
unnecessary-safety-comment = { level = "warn", priority = 2 }
unnecessary-safety-doc = { level = "warn", priority = 2 }
