[package]
name = "cargo-liner"
version = "0.10.0"
edition = "2024"
rust-version = "1.87"
description = """
Cargo subcommand to install and update binary packages listed in configuration.
"""
categories = [
    "command-line-utilities",
    "development-tools::cargo-plugins",
    "config",
]
keywords = ["cargo", "subcommand", "plugin", "install", "update"]
license = "GPL-3.0-only"
authors = ["Paul Mabileau <paulmabileau@hotmail.fr>"]
repository = "https://github.com/PaulDance/cargo-liner"
homepage = "https://github.com/PaulDance/cargo-liner"
documentation = "https://docs.rs/cargo-liner"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/src/**/*",
    "/examples/**/*",
    "/benches/**/*",
    "/tests/**/*",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE.txt",
]

[dependencies]
human-panic = { version = "~2.0", default-features = false, features = [
    "color",
] }
clap = { version = "~4.5", default-features = false, features = [
    "std",
    "derive",
    "cargo",
    "help",
    "wrap_help",
    "color",
    "error-context",
    "suggestions",
    "usage",
] }
clap_complete = { version = "~4.5", default-features = false }
log = { version = "~0.4", default-features = false, features = [
    "std",
    "serde",
] }
pretty_env_logger = { version = "~0.5", default-features = false }
color-eyre = { version = "~0.6", default-features = false, features = [
    "track-caller",
    "capture-spantrace",
] }
tabled = { version = "~0.20", default-features = false, features = [
    "derive",
    "ansi",
] }
serde = { version = "~1.0", default-features = false, features = ["derive"] }
serde_with = { version = "~3.14", default-features = false, features = [
    "macros",
] }
semver = { version = "~1.0", default-features = false, features = [
    "std",
    "serde",
] }
url = { version = "~2.5", default-features = false, features = ["serde"] }
regex = { version = "~1.11", default-features = false, features = [
    "std",
    "unicode-perl",
] }
toml = { version = "~0.9", default-features = false, features = [
    "serde",
    "parse",
] }
home = { version = "~0.5", default-features = false }

[dev-dependencies]
indoc = { version = "~2.0", default-features = false }
tempfile = { version = "~3.20", default-features = false }
trycmd = { version = "~0.15", default-features = false }
snapbox = { version = "~0.6", default-features = false }
cargo-test-macro = { version = "~0.4", default-features = false }
cargo-test-support = { version = "~0.7", default-features = false }

# See https://crates.io/crates/color-eyre: debug `backtrace` is slow.
[profile.dev.package.backtrace]
opt-level = 3

[lints.clippy]
all = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 1 }

allow-attributes = { level = "warn", priority = 2 }
allow-attributes-without-reason = { level = "warn", priority = 2 }
dbg-macro = { level = "warn", priority = 2 }
print-stdout = { level = "warn", priority = 2 }
print-stderr = { level = "warn", priority = 2 }
str-to-string = { level = "warn", priority = 2 }
string-to-string = { level = "warn", priority = 2 }
multiple-unsafe-ops-per-block = { level = "warn", priority = 2 }
undocumented-unsafe-blocks = { level = "warn", priority = 2 }
unnecessary-safety-comment = { level = "warn", priority = 2 }
unnecessary-safety-doc = { level = "warn", priority = 2 }

unnecessary-debug-formatting = { level = "allow", priority = 3 }
